+ Added templates for each lab.

--- a/GTI770-TP02.ipynb
+++ b/GTI770-TP02.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Laboratoire 1 : Extraction de primitives\n",
+    "# Laboratoire 2 : Arbre de désision, Bayes naïf et KNN\n",
     "#### Département du génie logiciel et des technologies de l’information\n",
     "\n",
     "| Étudiants             | NOMS - CODE PERMANENT                                   |\n",
@@ -20,69 +20,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import cv2"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introduction et revue de la littérature"
+    "## Introduction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 2"
+    "## Question 1\n",
+    "### Méthode de création des ensembles de données"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 3"
+    "## Question 1\n",
+    "### Détails des ensembles produits"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 4"
+    "## Question 2\n",
+    "### Approche de validation proposée et justification"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 5"
+    "## Question 3\n",
+    "### Matrice des expérimentations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion"
+    "## Question 3\n",
+    "### Étude des hyperparamètres et des modèles"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bibliographie"
+    "## Question 4\n",
+    "### Impact de la taille des ensembles de données sur la performance de classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 5\n",
+    "### Impact du bruit dans les ensembles de données sur la performance de classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 6\n",
+    "### Discussion sur la nature des données"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 7\n",
+    "### Recommandations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 8\n",
+    "### Améliorations possibles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bibliographie"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:gti770_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-gti770_env-py"
   },
   "language_info": {
    "codemirror_mode": {
