--- a/GTI770-TP04.ipynb
+++ b/GTI770-TP04.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Laboratoire 1 : Extraction de primitives\n",
+    "# Laboratoire 4 : Développement d'un système intelligent\n",
     "#### Département du génie logiciel et des technologies de l’information\n",
     "\n",
     "| Étudiants             | NOMS - CODE PERMANENT                                   |\n",
@@ -20,69 +20,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import cv2"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introduction et revue de la littérature"
+    "## Introduction et revue de la littérature"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 2"
+    "## Question 2\n",
+    "### Configuration de l'environnement"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 3"
+    "### Partitionnement des données"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 4"
+    "### Validation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 5"
+    "### Prétraitement"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion"
+    "## Question 3\n",
+    "### Description des modèles et justifications"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bibliographie"
+    "## Question 4\n",
+    "### Matrice des expérimentations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrice des résultats de l'étude des hyperparamètres"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Graphiques"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 5\n",
+    "### Présentation de la conception"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 6\n",
+    "### Hyperparamètres des modèles choisis dans la conception"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrice des résultats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 7 \n",
+    "### Formulation des recommandations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:gti770_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-gti770_env-py"
   },
   "language_info": {
    "codemirror_mode": {
