--- a/GTI770-TP03.ipynb
+++ b/GTI770-TP03.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Laboratoire 1 : Extraction de primitives\n",
+    "# Laboratoire 3 : Machines à vecteurs de support et réseaux neuronaux\n",
     "#### Département du génie logiciel et des technologies de l’information\n",
     "\n",
     "| Étudiants             | NOMS - CODE PERMANENT                                   |\n",
@@ -20,69 +20,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import cv2"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introduction et revue de la littérature"
+    "## Introduction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 2"
+    "## Question 1 \n",
+    "### Présentation de la méthode de validation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 3"
+    "## Question 2\n",
+    "### Description du modèle élaboré"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 4"
+    "## Question 3\n",
+    "### Analyse de la phase d'entraînement"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 5"
+    "## Question 4\n",
+    "### Matrice des expérimentations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion"
+    "### Étude des hyperparamètres des modèles"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bibliographie"
+    "## Question 5\n",
+    "### Matrice des expérimentations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Études des hyperparamètres des modèles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 6\n",
+    "### Discussion de l'impact de la taille des données"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 7\n",
+    "### Discussion de l'impact du bruit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 8\n",
+    "### Formulation des recommandations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 9\n",
+    "### Améliorations possibles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bibliographie"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:gti770_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-gti770_env-py"
   },
   "language_info": {
    "codemirror_mode": {
