* Added header to TP00

--- a/GTI770-TP00.ipynb
+++ b/GTI770-TP00.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Laboratoire 0 : Initiation au langage de programmation Python3\n",
+    "#### Département du génie logiciel et des technologies de l’information\n",
+    "\n",
+    "| Étudiants             | NOMS - CODE PERMANENT                                   |\n",
+    "|-----------------------|---------------------------------------------------------|\n",
+    "| Cours                 | GTI770 - Systèmes intelligents et apprentissage machine |\n",
+    "| Session               | SAISON ANNÉE                                            |\n",
+    "| Groupe                | X                                                       |\n",
+    "| Numéro du laboratoire | X                                                       |\n",
+    "| Professeur            | Prof. NOM                                               |\n",
+    "| Chargé de laboratoire | NOM                                                     |\n",
+    "| Date                  | DATE                                                    |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Introduction\n",
     "\n",
     "L'objectif de ce laboratoire est de vous familiariser avec Python et son environment. Il est important de suivre les étapes de ce cours et de pratiquer. Il est également important de lire la documentation offciel de python."
