--- a/GTI770-TP04.ipynb
+++ b/GTI770-TP04.ipynb
@@ -20,11 +20,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from custom.lab04.traitement import Traitement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "423\n"
+     ]
+    }
+   ],
+   "source": [
+    "trh = Traitement()\n",
+    "\n",
+    "index = ['SAMPLEID', 'TRACKID']\n",
+    "\n",
+    "for i in range(420):\n",
+    "    index.append('component_{}'.format(i))\n",
+    "\n",
+    "index.append('class')\n",
+    "\n",
+    "print(len(index))\n",
+    "\n",
+    "dataset = trh.Dataframe(\"data/csv/music/tagged_feature_sets/msd-trh_dev/msd-trh_dev.csv\", index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['METAL_ALTERNATIVE' 13.771035999999999 10.124119 ... 0.097815 0.353856\n",
+      "  0.692542]\n",
+      " ['PUNK' 13.660729000000002 7.829459 ... 0.07042999999999999\n",
+      "  0.034141000000000005 0.16246300000000002]\n",
+      " ['ROCK_NEO_PSYCHEDELIA' 21.288666 17.972587 ... 0.167688 0.11678\n",
+      "  4.324482]\n",
+      " ...\n",
+      " ['POP_CONTEMPORARY' 11.181041 13.351619 ... 0.201491 0.08182400000000001\n",
+      "  0.153254]\n",
+      " ['ROCK_CONTEMPORARY' 17.891527 13.542665 ... 0.263521\n",
+      "  0.14647000000000002 0.273956]\n",
+      " ['POP_CONTEMPORARY' 13.383951999999999 13.385648000000002 ... 0.095228\n",
+      "  0.047488 0.09412899999999999]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = dataset[dataset.columns.difference(['TRACKID', 'SAMPLEID'])]\n",
+    "print(data.values)\n",
+    "\n"
    ]
   },
   {
@@ -148,9 +208,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:gti770_env]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-gti770_env-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
